--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.18",
+    "paystack-api": "^2.0.6",
     "stripe": "^9.11.0"
   }
 }
